--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							</div>
 							<div class="title2">							
 								<p> Я могу быть правой рукой, левой рукой, ногами, глазами и парой новых мозговых извилин вашей команды. Я легко нахожу общий язык с разными людьми. Готов сделать все и даже больше, если я знаю, что это принесет реальную прибыль компании или команде, с которой я работаю. И конечно, что моя работа будет оценена по достоинству.</p>
-								<p> Отзывчивый и бескорыстный. Если вам понадобится помощь, чтобы спрятать труп, я найду наиболее эффективные способы утилизации тела в городе и за городом. А также 5 офисов, которые сделают это за вас. Трудоголик, быстро осхватываю, приспосабливаюсь, легкий на подъем, вынослив, хорошо анализирую ситуацию. Я знаю, как эффективно организовать день. Я не люблю тратить время зря.</p>
+								<p> Отзывчивый и бескорыстный. Если вам понадобится помощь, чтобы спрятать труп, я найду наиболее эффективные способы утилизации тела в городе и за городом. А также 5 офисов, которые сделают это за вас. Трудоголик, быстро схватываю, приспосабливаюсь, легкий на подъем, вынослив, хорошо анализирую ситуацию. Я знаю, как эффективно организовать день. Я не люблю тратить время зря.</p>
 							</div>
 							<div class="item">	
 								<h2 class="h-border theme-color">Навыки</h2>
