--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 								<div class="grid_4">
 									<ul class="list">
 										<li class="email">s.shchur2016@gmail.com</li>									
-										<li class="phone">+38 (093) 488 81 36</li>
+										<li class="phone">+38 (093) 488 81 36 (Viber, Telegram)</li>
 										<li class="phone">+38 (067) 678 24 55</li>
 										<li class="address">Киев, Соломенский р-н</li>
 									</ul>	
