--- a/index.html
+++ b/index.html
@@ -355,18 +355,15 @@
 										<li class="phone">+38 (093) 488 81 36 (Viber, Telegram)</li>
 										<li class="phone">+38 (067) 678 24 55</li>
 										<li class="address">Киев, Соломенский р-н</li>
-									</ul>	
-									<ul class="list2">
-										<li class="social"><a href="Shchur_Sergey.pdf" target="_blank" class="grayscale2 vtip" title="Download Resume" >
-										<span><img src="images/save.png"  alt="" /></span></a>
-										<a href="https://www.linkedin.com/in/sergey-shchur/" target="_blank" class="grayscale2 vtip" title="Linkedin" >
-										<span><img src="images/linkedin.png" alt="" /></span></a>
-										<a href="https://www.facebook.com/sirgey.hottabuch" target="_blank" class="grayscale2 vtip" title="Facebook" >
-										<span><img src="images/facebook.png" alt="" /></span></a>
-										<a href="skype:zloy_hottabu4?add" target="_blank" class="grayscale2 vtip" title="Skype" >
-										<span><img src="images/skype-s.png" alt="" /></span></a></li>										
-						 			</ul>																		
-								</div>	
+									</ul>
+								</div>
+								<div class="grid_44">
+									<ul class="list">
+										<li class="fb">https://www.facebook.com/sergey.hottabuch/</li>									
+										<li class="In">https://www.linkedin.com/in/sergey-shchur/</li>										
+										<li class="sk">zloy_hottabu4</li>
+									</ul>
+								</div>								
 							<div class="clear"></div>
 						</div>							
 					</div>						
@@ -379,10 +376,3 @@
 		<script type="text/javascript" src="js/init_form.js"></script>
 	</body>
 </html>
-
-
-
-
-
-
-
