--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<h2 class="jobtitle">Project Manager</h2>
 							</div>
 							<div class="grid_66 last2" id="head-social">
-									<a href="Shchur_Sergey.pdf" target="_blank" class="grayscale vtip" title="Download Resume" >
+									<a href="Shchur_Sergey_en.pdf" target="_blank" class="grayscale vtip" title="Download Resume" >
 										<span><img src="images/save.png"  alt="" /></span>
 									</a>
 									<a href="https://www.linkedin.com/in/sergey-shchur/" target="_blank" class="grayscale vtip" title="Linkedin" >
