--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									</a>							
 							</div>
 							<div class="textblock">
-								<p>Hi, I'm Sergey, I'm 30 years old and I'm looking for a new job.</p>
+								<p>Hi, I'm Sergey, I'm 32 years old and I'm looking for a new job.</p>
 							</div>
 							<div class="title2">							
 								<p> I can be right hand, left arm, legs, eyes and a couple of new brain gyrus of your team. I easily find a common language with a variety of people. Ready to do everything and even more if I know that this will bring real profit to the company or the team I work with. And of course, that my work will be appreciated.</p>
@@ -62,7 +62,7 @@
 									<div class="progress">
 										<div class="progressBar">
 											<div class="progressValue">
-												<span title="">70%</span>
+												<span title="">50%</span>
 											</div>
 										</div>
 									</div>	
@@ -76,13 +76,6 @@
 									<div class="progress">
 										<div class="progressBar">
 											<div class="progressValue">
-												<span title="">85%</span>
-											</div>
-										</div>
-									</div>
-									<div class="progress">
-										<div class="progressBar">
-											<div class="progressValue">
 												<span title="">60%</span>
 											</div>
 										</div>
@@ -90,7 +83,14 @@
 									<div class="progress">
 										<div class="progressBar">
 											<div class="progressValue">
-												<span title="">100%</span>
+												<span title="">55%</span>
+											</div>
+										</div>
+									</div>
+									<div class="progress">
+										<div class="progressBar">
+											<div class="progressValue">
+												<span title="">75%</span>
 											</div>
 										</div>
 									</div>
@@ -118,10 +118,10 @@
 								</div>								
 								<div class="grid_4 last">
 									<div class="progress-label">
-										<h4>Scrum/Kanban (4 years with team of 15 developers)</h4>
-										<h4>Drupal (more than 450 projects) </h4>
-										<h4>Wordpress (abou than 50 projects)</h4>
-										<h4>Joomla (abou than 10 projects)</h4>
+										<h4>Scrum/Kanban</h4>
+										<h4>Drupal/Wordpress/Joomla (more than 500 projects) </h4>
+										<h4>Jira</h4>
+										<h4>Confluence</h4>
 										<h4>Adobe Photoshop (intermediate)</h4>
 										<h4>Figma (intermediate)</h4>
 										<h4>English (intermediate)</h4>
@@ -129,9 +129,54 @@
 									</div>
 								</div>
 								<div class="clear"></div>
-							</div>							
+							</div>
 							<div class="item">	
 								<h2 class="h-border theme-color">Work Experience</h2>
+										<div class="grid_4">
+											<h3 class="title3">WAF (We Are the Future)</h3>
+											<h3 class="description1">Project manager</h3>
+											<h4 class="description2">Apr. 2020 - Present</h4>
+										</div>
+										<div class="grid_42">
+											<span class="theme-color">Sphere of activity:</span> outsource company.
+											<p>
+											<span class="theme-color">Personal qualities:</span> Mentoring, negotiation, meetings, perseverance, leadership skills, work with the different teams.
+											</p>
+											<p>
+											<span class="theme-color">Achievements:</span> Proactive and leadership attitude, created a workflow for juniors full-stack developers, retrospectives, meetings, planning, communication, and collaboration with new developers.
+											</p>
+										</div>
+										<div class="grid_4 last">
+											<h4>Responsibilities:</h4>
+											<ul class="list">												
+												<li>Own the project from start to delivery</li>
+												<li>Plan, manage, and monitor project’s execution</li>
+												<li>Work with business stakeholders</li>
+												<li>Pre-sales</li>
+												<li>Multi-task under tight deadlines</li>
+												<li>Applying continuous improvement approaches in daily work</li>
+												<li>Filtering and prioritizing tasks</li>
+												<li>Description of tasks in Jira and their management</li>												
+											</ul>
+										</div>
+										<div class="grid_4">
+											<h4>Work tools:</h4>
+											<ul class="checklist">
+												<li>MERN stack developers</li>
+												<li>Magento 1.9/2.4</li>
+												<li>Jira</li>									
+												<li>Trello</li>
+												<li>Confluence</li>
+												<li>Timedoctor</li>
+												<li>Clockify</li>
+												<li>Figma</li>									
+												<li>API</li>																					
+												<li>Mind map</li>												
+											</ul>
+										</div>								
+										<div class="clear"></div>							
+							<div class="item">
+										<h2 class="h-border theme-color"></h2>
 										<div class="grid_4">
 											<h3 class="title3">ArcadStroy, LLS</h3>
 											<h3 class="description1">Acting Director</h3>
@@ -352,15 +397,15 @@
 								<div class="grid_4">
 									<ul class="list">
 										<li class="email">s.shchur2016@gmail.com</li>									
-										<li class="phone">+38 (093) 488 81 36 (Viber, Telegram)</li>
+										<li class="phone">+38 (093) 488 81 36 (ONLY Viber)</li>
 										<li class="phone">+38 (067) 678 24 55</li>
 										<li class="address">Kyiv</li>
 									</ul>
 								</div>
 								<div class="grid_44">
 									<ul class="list">
-										<li class="fb">https://www.facebook.com/sergey.hottabuch/</li>									
-										<li class="In">https://www.linkedin.com/in/sergey-shchur/</li>										
+										<li class="fb"><a href="https://www.facebook.com/sergey.hottabuch/">Sergey.hottabuch</a></li>									
+										<li class="In"><a href="https://www.linkedin.com/in/sergey-shchur/">Sergey-shchur</a></li>										
 										<li class="sk">zloy_hottabu4</li>
 									</ul>
 								</div>								
@@ -376,10 +421,3 @@
 		<script type="text/javascript" src="js/init_form.js"></script>
 	</body>
 </html>
-
-
-
-
-
-
-
