--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 										<h4>Drupal/Wordpress/Joomla (more than 500 projects) </h4>
 										<h4>Jira</h4>
 										<h4>Confluence</h4>
-										<h4>Adobe Photoshop (intermediate)</h4>
-										<h4>Figma (intermediate)</h4>
-										<h4>English (intermediate)</h4>
+										<h4>Adobe Photoshop</h4>
+										<h4>Figma</h4>
+										<h4>English (B1 level)</h4>
 										<h4>PC (Windows, MS Office, Linux, ISP manager, Mockups)</h4>
 									</div>
 								</div>
