--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
 							<div class="item">	
 								<h2 class="h-border theme-color">Another education</h2>								
 								<div class="grid_41">
-									<h3 class="title">Html academy</h3>
-									<h3 class="description11">html/css</h3>
-									<h4 class="description21">2015</h4>
+									<h3 class="title">Project management</h3>
+									<h3 class="description11">Skillsetter</h3>
+									<h4 class="description21">Jan 2023 - present</h4>
 								</div>
 								<div class="grid_41">
 									<h3 class="title">English courses</h3>
-									<h3 class="description11">LINGUA ALLIANCE</h3>
-									<h4 class="description21">Mar - July 2015</h4>
+									<h3 class="description11">Privat teacher</h3>
+									<h4 class="description21">Sep - Dec 2020</h4>
 								</div>
 								<div class="grid_41">
 									<h3 class="title">Project and program management</h3>
