--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 								</div>
 								<div class="grid_41">
 									<h3 class="title">English courses</h3>
-									<h3 class="description11">Privat teacher</h3>
+									<h3 class="description11">Private teacher</h3>
 									<h4 class="description21">Sep - Dec 2020</h4>
 								</div>
 								<div class="grid_41">
