--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 								<p>Hi, I'm Sergey, I'm 33 years old and I'm looking for a new job.</p>
 							</div>
 							<div class="title2">							
-								<p> I can be right hand, left arm, legs, eyes and a couple of new brain gyrus of your team. I easily find a common language with a variety of people. Ready to do everything and even more if I know that this will bring real profit to the company or the team I work with. And of course, that my work will be appreciated.</p>
-								<p> Responsive and unselfish. Workaholic, quickly trained, adapt, easy to climb, hardy, I analyze the situation well. I know how to effectively organize the day. I do not like to waste time in vain.</p>
+								<p>With several years of experience as a Project Manager, I have developed a strong set of skills in managing complex projects from start to finish. My expertise includes resource allocation, risk management, budget tracking, and stakeholder communication. I have a track record of leading successful projects in a variety of industries, including software development, construction, and marketing.</p>
+								<p>I am also familiar with Agile and Waterfall methodologies and have worked on projects utilizing both approaches. I am committed to staying up-to-date with the latest project management trends and best practices and am constantly looking for ways to improve my skills and knowledge. I am a results-driven Project Manager with a passion for delivering high-quality projects that exceed client expectations.<p/>
 							</div>
-							<div class="item">	
+							<a href="Shchur_Sergey_en.pdf" target="_blank" download class="download-cv-btn">Download CV</a></li>
+							<div class="item">
+							<div class="clear"></div>
 								<h2 class="h-border theme-color">Skills</h2>
-								
 								<div class="grid_4">
-									<div class="testimonials">
-										
+									<div class="testimonials">										
 									</div>
 								</div>
 								<div class="grid_4">
@@ -132,18 +132,62 @@
 							</div>
 							<div class="item">	
 								<h2 class="h-border theme-color">Work Experience</h2>
+								<div class="grid_4">
+											<h3 class="title3">Blackridge Software</h3>
+											<h3 class="description1">Project manager</h3>
+											<h4 class="description2">Nov 2020 - Feb 2023</h4>
+										</div>
+										<div class="grid_42">
+											<span class="theme-color2">Sphere of activity:</span>  e-commerce outsource company.
+											<p>
+											<span class="theme-color2">Personal qualities:</span> Mentoring, negotiation, meetings, perseverance, leadership skills, work with the different teams.
+											</p>
+											<p>
+											<span class="theme-color2">Achievements:</span> Magento 1, Magento 2, Risk management, Estimation, Kanban.
+											</p>
+										</div>																	
+										<div class="grid_4 last">
+											<h4>Responsibilities:</h4>
+											<ul class="list">												
+												<li>Take full responsibility for the project, from its initiation to delivery</li>
+												<li>Develop a plan for the project, oversee its execution, and monitor progress towards completion</li>
+												<li>Collaborate with business stakeholders throughout the project lifecycle</li>
+												<li>Participate in pre-sales activities to secure project funding and support</li>
+												<li>Manage multiple tasks simultaneously, even under tight time constraints</li>
+												<li>Embrace continuous improvement practices to enhance the quality of your work</li>
+												<li>Prioritize tasks based on their importance and urgency</li>
+												<li>Use Jira to create and manage task descriptions for effective project management</li>												
+											</ul>
+										</div>
+										<div class="grid_4">
+											<h4>Work tools:</h4>
+											<ul class="checklist">
+												<li>Magento 1.9/2.4</li>
+												<li>Jira</li>									
+												<li>Trello</li>
+												<li>Confluence</li>												
+												<li>Figma</li>									
+												<li>API integrations</li>																					
+												<li>Mind map</li>	
+												<li>Browserstack</li>
+												<li>Weltpixel</li>												
+											</ul>
+										</div>								
+										<div class="clear"></div>							
+							<div class="item">
+										<h2 class="h-border theme-color"></h2>
 										<div class="grid_4">
 											<h3 class="title3">WAF (We Are the Future)</h3>
 											<h3 class="description1">Project manager</h3>
-											<h4 class="description2">Apr. 2020 - Present</h4>
+											<h4 class="description2">Apr. 2020 - Present (part time)</h4>
 										</div>
 										<div class="grid_42">
-											<span class="theme-color">Sphere of activity:</span> outsource company.
+											<span class="theme-color2">Sphere of activity:</span> outsource company.
 											<p>
-											<span class="theme-color">Personal qualities:</span> Mentoring, negotiation, meetings, perseverance, leadership skills, work with the different teams.
+											<span class="theme-color2">Personal qualities:</span> Mentoring, negotiation, meetings, perseverance, leadership skills, work with the different teams.
 											</p>
 											<p>
-											<span class="theme-color">Achievements:</span> Proactive and leadership attitude, created a workflow for juniors full-stack developers, retrospectives, meetings, planning, communication, and collaboration with new developers.
+											<span class="theme-color2">Achievements:</span> Proactive and leadership attitude, created a workflow for juniors full-stack developers, retrospectives, meetings, planning, communication, and collaboration with new developers.
 											</p>
 										</div>
 										<div class="grid_4 last">
@@ -155,40 +199,38 @@
 												<li>Pre-sales</li>
 												<li>Multi-task under tight deadlines</li>
 												<li>Applying continuous improvement approaches in daily work</li>
-												<li>Filtering and prioritizing tasks</li>
-												<li>Description of tasks in Jira and their management</li>												
+												<li>Filtering and prioritizing tasks</li>																							
 											</ul>
 										</div>
 										<div class="grid_4">
 											<h4>Work tools:</h4>
 											<ul class="checklist">
-												<li>MERN stack developers</li>
-												<li>Magento 1.9/2.4</li>
-												<li>Jira</li>									
+												<li>MERN stack developers</li>																					
 												<li>Trello</li>
-												<li>Confluence</li>
+												<li>UpWork</li>												
 												<li>Timedoctor</li>
 												<li>Clockify</li>
 												<li>Figma</li>									
 												<li>API</li>																					
-												<li>Mind map</li>												
+												<li>Mind map</li>
+												<li>External services</li>												
 											</ul>
 										</div>								
-										<div class="clear"></div>							
-							<div class="item">
-										<h2 class="h-border theme-color"></h2>
+										<div class="clear"></div>																	
+										<div class="item">
+										<h2 class="h-border theme-color"></h2>	
 										<div class="grid_4">
 											<h3 class="title3">ArcadStroy, LLS</h3>
 											<h3 class="description1">Acting Director</h3>
 											<h4 class="description2">Aug. 2018 - Jan. 2020</h4>
 										</div>
 										<div class="grid_42">
-											<span class="theme-color">Sphere of activity:</span> building company.
+											<span class="theme-color2">Sphere of activity:</span> building company.
 											<p>
-											<span class="theme-color">Personal qualities:</span> Perseverance, leadership skills, development of a new field of activity, negotiation.
+											<span class="theme-color2">Personal qualities:</span> Perseverance, leadership skills, development of a new field of activity, negotiation.
 											</p>
 											<p>
-											<span class="theme-color">Achievements:</span> Creating a new company in the construction sector.
+											<span class="theme-color2">Achievements:</span> Creating a new company in the construction sector.
 											</p>
 										</div>
 										<div class="grid_4 last">
@@ -227,12 +269,12 @@
 											<h4 class="description2">Sept. 2017 - July 2018</h4>
 										</div>
 											<div class="grid_42">
-												<span class="theme-color">Sphere of activity:</span> development and creation of sites of any complexity in the public sector
+												<span class="theme-color2">Sphere of activity:</span> development and creation of sites of any complexity in the public sector
 												<p>
-												<span class="theme-color">Personal qualities:</span> Leadership skills, responsibility for the team, responsibility for the image of the company.
+												<span class="theme-color2">Personal qualities:</span> Leadership skills, responsibility for the team, responsibility for the image of the company.
 												</p>
 												<p>
-												<span class="theme-color">Achievements:</span> Market launch of a new product. Solving problems with renting, cleaning, issuing wages, equipping the employee's workplace.
+												<span class="theme-color2">Achievements:</span> Market launch of a new product. Solving problems with renting, cleaning, issuing wages, equipping the employee's workplace.
 												</p>
 											</div>												
 												<div class="grid_4 last">
@@ -269,12 +311,12 @@
 									<h4 class="description2">July 2016 - July 2017</h4>
 								</div>
 								<div class="grid_42">
-									<span class="theme-color">Sphere of activity:</span> development and creation of sites of any complexity.
+									<span class="theme-color2">Sphere of activity:</span> development and creation of sites of any complexity.
 									<p>
-									<span class="theme-color">Personal qualities:</span> Leadership skills, responsibility for the team, responsibility for the image of the company.
+									<span class="theme-color2">Personal qualities:</span> Leadership skills, responsibility for the team, responsibility for the image of the company.
 									</p>
 									<p>
-									<span class="theme-color">Achievements:</span> Market launch of a new product. Solving office problems, providing jobs, recruiting staff, and conducting interviews with new candidates.
+									<span class="theme-color2">Achievements:</span> Market launch of a new product. Solving office problems, providing jobs, recruiting staff, and conducting interviews with new candidates.
 									</p>
 								</div>
 								<div class="grid_4 last">
@@ -307,7 +349,9 @@
 										<li>Mockups</li>
 										<li>Html/css</li>
 									</ul>
-								</div>								
+								</div>
+								</div>																
+								</div>																								
 								<div class="clear"></div>
 							</div>
 							<div class="item">	
@@ -318,12 +362,12 @@
 									<h4 class="description2">Aug 2012 - Jan 2016</h4>
 								</div>
 								<div class="grid_42">
-									<span class="theme-color">Sphere of activity:</span> website development of any complexity (portals, business cards, online stores, landing page).
+									<span class="theme-color2">Sphere of activity:</span> website development of any complexity (portals, business cards, online stores, landing page).
 									<p>
-									<span class="theme-color">Personal qualities:</span> stress resistance, sociability, hard work, perseverance.
+									<span class="theme-color2">Personal qualities:</span> stress resistance, sociability, hard work, perseverance.
 									</p>
 									<p>
-									<span class="theme-color">Achievements:</span> Working with a team of 15-20 people. Work on 10 or more projects simultaneously. Solving complex problems..
+									<span class="theme-color2">Achievements:</span> Working with a team of 15-20 people. Work on 10 or more projects simultaneously. Solving complex problems..
 									</p>
 								</div>								
 								<div class="grid_4 last">
@@ -417,7 +461,7 @@
 				</div>	
 			</div>
 		</div>
-		<div class="clear"></div>
+		<div class="clear"></div>		
 		<script type="text/javascript" src="js/init_form.js"></script>
 	</body>
 </html>
